refactor:изменить модификаторы доступа